--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
     "expo": "~54.0.20",
+    "expo-application": "~5.0.0",
     "expo-constants": "~18.0.10",
+    "expo-crypto": "~14.0.0",
+    "expo-device": "~7.0.0",
     "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.10",
